[package]
name = "event"
version = "0.1.0"
edition = "2021"

[dependencies]
critical-section = { version = "1.1", features=["restore-state-bool"]}
lazy_static = { version = "1.5.0", features = ["spin_no_std"] }

cfg = { path = "../cfg" }
cell = { path = "../cell" }
executor = { path = "../executor" }

[features]
OS_EVENT_NAME_EN = []
